--- a/frontend/static/style2.css
+++ b/frontend/static/style2.css
@@ -384,6 +384,7 @@ button {
 	padding: 10px 20px;
 	color: rgb(255, 255, 255);
 	background: transparent;
+    background-color: white;
 	border: none;
 	backdrop-filter: blur(15px);
 	border-radius: 5px;
