--- a/frontend/static/style2.css
+++ b/frontend/static/style2.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,700");
 body {
   min-height: 100vh;
-  font-size: 14px;
+  font-size: 100%;
   font-family: Roboto, sans-serif;
 }
 
