--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -20,6 +20,12 @@ body {
   --primary-color: rgb(54, 217, 216);
   --purple-color: rgb(137, 79, 198);
   --light-blue-color: rgb(213, 222, 234);
+    --primary-color2: #1f2a44; /* Color oscuro de fondo */
+  --secondary-color: #2c3e50; /* Un tono más suave para los elementos secundarios */
+  --accent-color: #3498db; /* Azul para detalles y botones */
+  --highlight-color: #e74c3c; /* Un rojo suave para destacar algo importante */
+  --text-color-light: #ecf0f1; /* Color de texto claro y suave */
+  --text-color-muted: #95a5a6;
 }
 
 .popup-content {
