--- a/frontend/static/style3.css
+++ b/frontend/static/style3.css
@@ -29,7 +29,7 @@ body {
 
 .dashboard {
   position: relative;
-  width: 1280px;
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(2, auto);
   color: rgb(255, 255, 255);
@@ -38,7 +38,7 @@ body {
 }
 
 .projects {
-  padding: 20% 20%; /* aqui se modifica el padding detodo*/
+  padding: 45px 45px; /* aqui se modifica el padding detodo*/
 }
 
 .welcome-banner h1 {
@@ -178,7 +178,7 @@ body {
 .fruit-blend {
   --project-color: linear-gradient(to right, #f9d423 0%, #ff4e50 100%);
 }
-/*
+
 .menu {
   position: absolute;
   top: 26px;
@@ -192,13 +192,15 @@ body {
   background: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
 }
- esta mamada es el logo de configurac
+
 .menu svg {
   fill: white;
 }
-*/
+
 .project-detail {
   margin: 8px;
+  margin-left: -14%;
+  max-width: 60%;
   padding: 16px 76px;
   background: #0d11194c;
   border-radius: 15px;
@@ -478,7 +480,6 @@ body {
 
 .carousel {
   position: relative;
-  max-width: 800px; /* Ajusta según el diseño deseado */
   margin: 0 auto;
   overflow: hidden;
   padding: 0 60px; /* Espacio lateral para los botones */
